MDEV-6221 SQL_CALC_FOUND_ROWS yields wrong result again

replace another old "was there a filesort?" test with
a correct "did filesort calculate found_rows?" test.